// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persistent versions of the notifications work 1`] = `
<InlineNotification
  persistent={true}
  title="Error"
  type="negative"
>
  <GenericNotification
    autohide={false}
    persistent={true}
    style="inline"
    title="Error"
    type="negative"
  >
    <div
      className="notification negative inline hidden"
      onTransitionEnd={[Function]}
      style={
        Object {
          "marginTop": undefined,
        }
      }
    >
      <div
        className="icon"
      >
        <Icon
          icon={null}
          inheritSize={true}
          role="presentation"
        >
          <svg
            aria-hidden={true}
            className="icon inheritSize"
            focusable="false"
            role="presentation"
            viewBox="viewBox"
          >
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </div>
      <div
        className="textContainer"
      >
        <span
          className="title"
        >
          Error
        </span>
        <span
          className="textWrapper"
        >
          <span
            className="text"
          >
            Something has gone wrong
          </span>
        </span>
      </div>
    </div>
  </GenericNotification>
</InlineNotification>
`;

exports[`The basic notification renders correctly 1`] = `
<InlineNotification
  persistent={false}
  title="Warning"
  type="warning"
>
  <GenericNotification
    autohide={false}
    persistent={false}
    style="inline"
    title="Warning"
    type="warning"
  >
    <div
      className="notification warning inline hidden"
      onTransitionEnd={[Function]}
      style={
        Object {
          "marginTop": undefined,
        }
      }
    >
      <div
        className="icon"
      >
        <Icon
          icon={null}
          inheritSize={true}
          role="presentation"
        >
          <svg
            aria-hidden={true}
            className="icon inheritSize"
            focusable="false"
            role="presentation"
            viewBox="viewBox"
          >
            <use
              xlinkHref="#id"
            />
          </svg>
        </Icon>
      </div>
      <div
        className="textContainer"
      >
        <span
          className="title"
        >
          Warning
        </span>
        <span
          className="textWrapper"
        >
          <span
            className="text"
          >
            Something has gone wrong
          </span>
        </span>
      </div>
      <CancelButton
        onClick={[Function]}
      >
        <button
          className="cancel"
          onClick={[Function]}
        >
          <span
            className="cancelInner"
          >
            <Icon
              icon={null}
              inheritSize={true}
              role="img"
              title="close notification"
            >
              <svg
                aria-labelledby="id-2-title"
                className="icon inheritSize"
                focusable="false"
                role="img"
                viewBox="viewBox"
              >
                <title
                  id="id-2-title"
                >
                  close notification
                </title>
                <use
                  xlinkHref="#id"
                />
              </svg>
            </Icon>
          </span>
        </button>
      </CancelButton>
    </div>
  </GenericNotification>
</InlineNotification>
`;
